Java test and build cleanup (#785)